--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "shadow-cljs watch app",
     "build": "shadow-cljs release app",
+    "test:watch": "shadow-cljs watch test",
+    "test": "shadow-cljs compile test && node target/test.cjs",
+    "check": "npm run test && npm run build",
     "preview": "npx http-server target/shadow/app -p 8080",
     "shadow:watch": "shadow-cljs watch app",
     "shadow:release": "shadow-cljs release app"
